--- a/grid.css
+++ b/grid.css
@@ -6,17 +6,18 @@
 body {
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 100vh;
   max-height: 100vh;
 }
 #grid {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   /* height: 100vh;
   max-height: 100vh; */
-  height: 100vh;
-  width: 100vh;
+  height: 80vh;
+  width: 80vh;
   background-color: black;
 }
 
@@ -24,14 +25,19 @@ body {
   display: flex;
   flex: 1;
   background-color: black;
-  justify-content: space-evenly;
+  justify-content: space-between;
+}
+
+.box {
+  display: flex;
+  justify-content: space-between;
+  aspect-ratio: 1/1;
+  margin: 1%;
+  border: 0.2vw solid white;
 }
 
 .square {
   flex: 1 0 auto;
-  height: auto;
-  width: auto;
   background-color: aqua;
-  border: 2px solid white;
-  margin: 1% 0 0 1%;
+  opacity: 0;
 }
